--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -47,6 +47,11 @@
     },
     "counters": {
         "warding_flare": "Warding flare",
-        "channel_divinity": "Channel divinity"
+        "channel_divinity": "Channel divinity",
+        "harness_divine_power": "Harness divine power"
+    },
+    "settings": {
+        "characters": "Personnages",
+        "homebrews": "Homebrews"
     }
 }
