--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -51,5 +51,8 @@
     },
     "settings": {
         "characters": "Characters"
+    },
+    "create": {
+        "title": "Create character"
     }
 }
